<resources>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_legal_notice">Legal notice</string>
    <string name="btn_list">List</string>
    <string name="btn_okay">Okay</string>
    <string name="btn_quit">Quit</string>
    <string name="description_edit">Edit</string>
    <string name="description_filter">Filter</string>
    <string name="description_gps">Current location</string>
    <string name="description_logo">Wheelmap</string>
    <string name="description_map">Map</string>
    <string name="error_authorization_error">Email or password was wrong. Sorry. Can\'t log you
        in.
    </string>
    <string name="error_internal_error">An unexpected internal error occurred. Please restart the
        app.
    </string>
    <string name="error_network_failure">Network unstable. Please check your internet connection or
        try again later.
    </string>
    <string name="error_network_title">Network issue</string>
    <string name="error_title_occurred">An error occurred</string>
    <string name="info_a_project_of">a project of</string>
    <string name="info_android_development">Android Development:</string>
    <string name="info_android_development_one">Michal Harakaľ</string>
    <string name="info_android_development_two">Michael Kröz</string>
    <string name="info_icons">Icons:</string>
    <string name="info_kartendaten">Mapdata:</string>
    <string name="info_kartendaten_one">www.openstreetmap.org</string>
    <string name="info_kartendaten_two">© OpenStreetMap contributors, CC-BY-SA</string>
    <string name="info_stiftung_text_one">Thanks to Fürst Donnersmarck-Stiftung</string>
    <string name="info_web_version">Web-Version:</string>
    <string name="info_web_version_one">www.wheelmap.org</string>
    <string name="info_webdevelopment">Web Development:</string>
    <string name="info_webdevelopment_one">Christoph Bünte</string>
    <string name="legal_notice_commonsware">Two Modules</string>
    <string name="legal_notice_commonsware_copyright">© CommonsWare LLC</string>
    <string name="legal_notice_commonsware_copyright_two">(Apache License V2)</string>
    <string name="legal_notice_iconscollection">Map Icons Collection</string>
    <string name="legal_notice_iconscollection_copyright">© http://mapicons.nicolasmollet.com
    </string>
    <string name="legal_notice_iconscollection_copyright_two">(CC BY-SA 3.0)</string>
    <string name="legal_notice_intro">This Software is based on other works. Their copyright is as
        follows:
    </string>
    <string name="legal_notice_jackson">Jackson JSON Processor</string>
    <string name="legal_notice_jackson_copyright">(Apache License V2)</string>
    <string name="legal_notice_mapsforge">Mapsforge</string>
    <string name="legal_notice_mapsforge_copyright">© http://mapsforge.org (LGPL V3)</string>
    <string name="legal_notice_opensource">This Software is Open Source</string>
    <string name="legal_notice_opensource_copyright">
        https://github.com/sozialhelden/wheelmap-android
    </string>
    <string name="legal_notice_opensource_copyright_one">(Apache License V2)</string>
    <string name="legal_notice_pulltorefresh">PullToRefresh Widget</string>
    <string name="legal_notice_pulltorefresh_copyright">© Chris Banes (Apache License V2)</string>
    <string name="legal_notice_springandroid">Spring Android</string>
    <string name="legal_notice_springandroid_copyright">© Spring Framework Project</string>
    <string name="legal_notice_springandroid_copyright_two">(Apache License V2)</string>
    <string name="legal_notice_springandroid_copyright_three">http://www.springframework.org
    </string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="no_pois">no places found according your filter settings</string>
    <string name="poi_new_default_name">New POI</string>
    <string name="poi_property_address">Address</string>
    <string name="poi_property_category">Category</string>
    <string name="poi_property_comment">Comment</string>
    <string name="poi_property_name">Name</string>
    <string name="poi_property_nodetype">Type</string>
    <string name="poi_property_phone">Phone</string>
    <string name="poi_property_position">Position</string>
    <string name="poi_property_website">Website</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Refreshing…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="settings_category_filter">Category Filter</string>
    <string name="settings_wheelchair_limited">Limited</string>
    <string name="settings_wheelchair_no">No</string>
    <string name="settings_wheelchair_state">Wheelchair state</string>
    <string name="settings_wheelchair_unknown">Unknown</string>
    <string name="settings_wheelchair_yes">Yes</string>
    <string name="support_category_unknown">Category unknown</string>
    <string name="support_nodetype_unknown">Type unknown</string>
    <string name="title_category_select">Select Categories to display</string>
    <string name="title_info">Credits</string>
    <string name="title_legal_notice">Legal notice</string>
    <string name="title_please_wait">Please wait</string>
    <string name="title_pois_detail">Info</string>
    <string name="title_pois_detail_edit">Edit the point of interest</string>
    <string name="title_pois_list">List</string>
    <string name="title_pois_map">Map</string>
    <string name="title_pois_settings">Filter settings</string>
    <string name="title_wheelchair_state">Wheelchair accessible?</string>
    <string name="ws_disabled">No: Entry has steep or several steps, rooms are not accessible
    </string>
    <string name="ws_disabled_title">Not wheelchair accessible</string>
    <string name="ws_enabled">Yes: Entrance without steps, all rooms without steps and accessible
        toilet
    </string>
    <string name="ws_enabled_title">Wheelchair accessible</string>
    <string name="ws_limited">Limited: Entry has a step (max. height 7cm), most rooms are stepless,
        toilet is not accessible
    </string>
    <string name="ws_limited_title">Partly wheelchair accessible</string>
    <string name="ws_unknown">Unknown: Help us and mark this location.</string>
    <string name="ws_unknown_title">Unknown Status</string>
    <string name="to_far_away">To far away to load new Points</string>
    <string name="move_the_map">Please move the map by touching</string>
    <string name="dialog_close_editable">Do you really wanna close the Editscreen?</string>
    <string name="error_authorization_login_failed">Login Failed</string>
    <string name="error_authorization_not_osm_connected">Your wheelmap account is not connected to
        openstreetmap.
    </string>
    <string name="error_authorization_request_forbidden">Request forbidden</string>
    <string name="error_authorization_request_failed">Authorization failed. The app does not have
        proper access rights to the service. If you are logged in, your can try to log out.
        Otherwise the app needs to be updated or the service has a problem.
    </string>
    <string name="error_authorization_required">Authorization required</string>
    <string name="error_category_missing_message">Cannot store without a category for the
        location.
    </string>
    <string name="error_category_missing_title">No category set!</string>
    <string name="error_network_client_failure">This App cant communicate with the server. You need
        an update. Sorry.
    </string>
    <string name="error_network_server_failure">The Wheelmap server has a problem. Please try again
        later.
    </string>
    <string name="error_network_server_maintenance">The Wheelmap server is down for maintenance.
        Please try again later
    </string>
    <string name="error_network_unknown_failure">An unknown network failure occurred. Sorry,
        communication failed.
    </string>
    <string name="error_newpoi_message">The new location will be verified before it shows up in the
        database. This will take some time.
    </string>
    <string name="error_newpoi_title">New Location created</string>
    <string name="error_noid_message">Sorry, this link contains no identification to retrieve from
        the Wheelmap servers. Unable to find the location.
    </string>
    <string name="error_noid_title">Link lacks node id</string>
    <string name="error_not_enough_memory">Your phone does not provide enough memory for this
        application. Sorry.
    </string>
    <string name="error_wheelchairstate_missing_message">Please select a wheelchair accessibility.
    </string>
    <string name="error_wheelchairstate_missing_title">No Wheelchair State given</string>
    <string name="helper_delim_dash">\ - \</string>
    <string name="info_development">Development</string>
    <string name="info_design">Design</string>
    <string name="info_design_one">Simon Staib</string>
    <string name="info_smf">Smart Mobile Factory GmbH</string>
    <string name="info_clientdevelopment">Android API Client</string>
    <string name="info_clientdevelopment_one">Pat Lipp</string>
    <string name="info_wheelmap_android_one">Wheelmap Android:</string>
    <string name="info_wheelmap_android_two">Version</string>
    <string name="legal_notice_entypo">Entypo pictograms by Daniel Bruce</string>
    <string name="login_text">Log in with your Wheelmap-Account.</string>
    <string name="login_register_discription">New? Register now at OpenStreetmap and Wheelmap.org</string>
    <string name="login_email">Email</string>
    <string name="login_link_text">Register at Wheelmap.org</string>
    <string name="login_link_wheelmap">http://wheelmap.org/users/sign_in</string>
    <string name="login_password">Password</string>
    <string name="login_submit">Login</string>
    <string name="menu_about">About</string>
    <string name="menu_directions">Navigation</string>
    <string name="menu_filter">Filter Settings</string>
    <string name="menu_mylocation">Move Here</string>
    <string name="menu_new_poi">Create New POI</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_photo">Photo</string>
    <string name="poi_property_photos">Photos</string>
    <string name="menu_account">Account</string>
    <string name="menu_news">News</string>
    <string name="poi_property_city">City</string>
    <string name="poi_property_comment_no_comment">No comment</string>
    <string name="poi_property_comment_no_adress">No adress</string>
    <string name="poi_property_comment_no_photos">No photos</string>
    <string name="poi_property_housenum">No</string>
    <string name="poi_property_postcode">Code</string>
    <string name="poi_property_street">Street</string>
    <string name="position_geopoint">Location</string>
    <string name="search_distance">Distance</string>
    <string name="search_distance_unspecified">Whatever</string>
    <string name="search_execute">Search</string>
    <string name="search_hint_list">Keyword</string>
    <string name="search_mode_distance">By Distance</string>
    <string name="search_no_selection">All</string>
    <string name="search_pick_category">Pick a (sub)category</string>
    <string name="search_pick_map">It is only searched within the selected map area.</string>
    <string name="settings_login_delete">Click to delete this sign in.</string>
    <string name="search_mode_map">By Map</string>
    <string name="settings_login_information">Signed In?</string>
    <string name="settings_login_notsignedin">You are not signed in.</string>
    <string name="settings_login_signedinas">You are signed in as</string>
    <string name="settings_unit_imperial">Imperial</string>
    <string name="settings_unit_metric">Metric</string>
</resources>