<?xml version="1.0" encoding="utf-8"?>
<!--
  #%L
  Wheelmap - App
  %%
  Copyright (C) 2011 - 2012 Michal Harakal - Michael Kroez - Sozialhelden e.V.
  %%
  Wheelmap App based on the Wheelmap Service by Sozialhelden e.V.
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS-IS" BASIS
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  #L%
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBarNew.SingleLine" >

        <TextView
            style="@style/TitleBarTextNew.Title"
            android:text="@string/title_legal_notice" >
        </TextView>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            style="@style/Container.ScrollviewContent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/legal_notice_intro"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/seperator_medium"
                android:background="@color/light_grey_two" />

            <TextView
                style="@style/FontLegalNoticeTitle"
                android:text="@string/legal_notice_mapsforge" />

            <TextView
                style="@style/FontLegalNoticeItem"
                android:autoLink="web"
                android:gravity="center_horizontal"
                android:text="@string/legal_notice_mapsforge_copyright"
                android:textColorLink="@color/dark_grey_one" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/seperator_medium"
                android:background="@color/light_grey_two" />

            <TextView
                style="@style/FontLegalNoticeTitle"
                android:text="@string/legal_notice_pulltorefresh" />

            <TextView
                style="@style/FontLegalNoticeItem"
                android:text="@string/legal_notice_pulltorefresh_copyright" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/seperator_medium"
                android:background="@color/light_grey_two" />

            <TextView
                style="@style/FontLegalNoticeTitle"
                android:text="@string/legal_notice_springandroid" />

            <TextView
                style="@style/FontLegalNoticeItem"
                android:text="@string/legal_notice_springandroid_copyright" />

            <TextView
                style="@style/FontLegalNoticeItem"
                android:text="@string/legal_notice_springandroid_copyright_two" />

            <TextView
                style="@style/FontLegalNoticeItem"
                android:autoLink="web"
                android:text="@string/legal_notice_springandroid_copyright_three"
                android:textColorLink="@color/dark_grey_one" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/seperator_medium"
                android:background="@color/light_grey_two" />

            <TextView
                style="@style/FontLegalNoticeTitle"
                android:text="@string/legal_notice_jackson" />

            <TextView
                style="@style/FontLegalNoticeItem"
                android:text="@string/legal_notice_jackson_copyright" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/seperator_medium"
                android:background="@color/light_grey_two" />

            <TextView
                style="@style/FontLegalNoticeTitle"
                android:text="@string/legal_notice_commonsware" />

            <TextView
                style="@style/FontLegalNoticeItem"
                android:text="@string/legal_notice_commonsware_copyright" />

            <TextView
                style="@style/FontLegalNoticeItem"
                android:text="@string/legal_notice_commonsware_copyright_two" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/seperator_medium"
                android:background="@color/light_grey_two" />

            <TextView
                style="@style/FontLegalNoticeTitle"
                android:text="@string/legal_notice_iconscollection" />

            <TextView
                style="@style/FontLegalNoticeItem"
                android:autoLink="web"
                android:text="@string/legal_notice_iconscollection_copyright"
                android:textColorLink="@color/dark_grey_one" />

            <TextView
                style="@style/FontLegalNoticeItem"
                android:text="@string/legal_notice_iconscollection_copyright_two" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/seperator_medium"
                android:background="@color/light_grey_two" />

            <TextView
                style="@style/FontLegalNoticeTitle"
                android:text="@string/legal_notice_opensource" />

            <TextView
                style="@style/FontLegalNoticeItem"
                android:autoLink="web"
                android:text="@string/legal_notice_opensource_copyright"
                android:textColorLink="@color/dark_grey_one" />

            <TextView
                style="@style/FontLegalNoticeItem"
                android:text="@string/legal_notice_opensource_copyright_one" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>