<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_search"
            android:icon="@drawable/ic_menu_search_wheelmap_light"
            android:showAsAction="ifRoom"
            android:title="@string/menu_search"/>
    <item
            android:id="@+id/menu_new_poi"
            android:menuCategory="secondary"
            android:orderInCategory="0"
            android:showAsAction="never"
            android:title="@string/menu_new_poi"/>
    <item
            android:id="@+id/menu_filter"
            android:menuCategory="secondary"
            android:orderInCategory="1"
            android:showAsAction="never"
            android:title="@string/menu_filter"/>
    <item
            android:id="@+id/menu_about"
            android:menuCategory="secondary"
            android:orderInCategory="2"
            android:showAsAction="never"
            android:title="@string/menu_about">
    </item>

</menu>